public/src/css/styles.less
/* ... */
.wizard .steps .done a:hover {
  background-color: @navy;
}

.body .control-label {
  font-size: 24px;
  color: @navy;
}

.mandatory {
  margin: 10px 0px 0px 60px;
}

.has-error .radio label {
  color: black !important;
}

// Search Results
// -------------------------

.results-tabs {
  font-size: 190%;
  margin: 30px 0px 0px;
  background-color: transparent;
  text-transform: capitalize;
  &:first-child {
    border-left: 2px solid @lighter-grey;
  }
  li a {
    text-decoration: none;
    color: @light-grey;
    border: 2px solid @lighter-grey;
    border-left: transparent;
    border-bottom: 2px solid @light-grey !important;
    &:hover {
      color: @dark-green;
      border: 2px solid @light-grey;
      border-left: transparent;
      border-bottom: transparent;
    }
  }
  li.active a {
    border: 2px solid @light-grey !important;
    border-bottom: transparent !important;
    color: @dark-green;
    cursor: hover;
    &:hover {
      color: @dark-navy;
    }
  }
}

.search-intro {
  display: none;
  color: @navy;
  font-weight: bold;
  font-size: 250%;
  padding-top: 40px;
}

.results {
  padding-top: 0;
}

.opportunities-container {
  font-size: 16px;
  .row {
    margin-left: 0px;
    margin-right: 0px;
  }
}

.row-header, .col-description-header, .col-deadline-header, .row-loans, .col-md-6, .col-md-3 {
  padding-left: 0px;
  padding-right: 0px;
}

.row-benefit-count {
  margin-bottom: 40px;
  h3 {
    font-family: 'Montserrat';
    margin-top: 30px;
    color: @light-blue;
    font-size: 270%;
  }
}

.row-header h4 {
  font-size: 135%;
  position: absolute;
  bottom: 0;
}

.benefit-title {
  color: @dark-green;
  font-size: 130%;
  text-transform: capitalize;
  &:hover {
    text-decoration: none;
  }
}

.col-deadline, .col-est-time {
  font-size: 115%;
}

.panel-group .panel {
  border: none;
  border-radius: 0;
  &:nth-of-type(odd) {
    background: @lightest-grey;
  }
  + .panel {
    margin-top: 0;
  }
}

.additional-info {
  font-weight: bold;
}

//Shopping Cart Stuff
// -------------------------

.cart-popover {
  position: fixed;
  top: 71px !important;
  left: 80% !important;
}

.popover-content {
  overflow: hidden;
}

.cart-title {
  text-transform: capitalize;
}

//Collapsible Styling
// -------------------------

.panel-group {
  margin-bottom: 0px;
}

.panel {
  margin-bottom: 10px;
}

// About Page
// -------------------------

.about {
  width: 70%;
  text-align: left;
  max-width: 80%;
  margin: auto;
  line-height: 2.2em;
  h2 {
    font-size: 250%;
    text-align: center;
    margin-bottom: 30px;
  }
}

.center {
  margin: auto;
  text-align: center;
}

// Sign-In
// -------------------------

.subpagetitle {
  color: @navy;
  font-weight: bold;
  line-height: 1.8em;
  font-size: 250%;
  margin: 35px 0px;
  border-bottom: 2px @light-grey solid;
}

.control-label {
  font-size: 150%;
}

// Admin
// -------------------------

#new .btn {
  margin: 0px;
}

td {
  width: 20%;
  :first-child :last-child {
    width: 25%;
  }
}

.admin thead {
  font-size: 135%;
}

.table-condensed > tbody > tr > td{
  padding: 20px 10px 15px;
}

// Last Step/More Info Confirmation
// -------------------------

.send-request-container {
  h3 {
    margin-top: 70px;
    margin-bottom: 30px;
  }
}



// Confirmation Page - Send Lead
// -------------------------

.congratulations-message {
  width: 75%;
  h2 {
    margin-top: 15px;
    font-weight: 100;
  }
}

.additional-options {
  font-size: 125%;
  line-height: 2em;
  h3 {
  margin-top: 25px;
  }
}

// Buttons
// -------------------------

.btn {
  background-color: @dark-green;
  color: @white;
  font-size: 150%;
  margin: 20px;
  padding: 15px;
  border: none;
  text-decoration: none !important;
  &:hover {
    background-color: @darker-green;
  }
}

.admin-edit {
  font-size: 115%;
  padding: 12px;
  margin: 0px 12px 12px 10px;
}

#new .btn {
  padding: 10px;
  font-size: 100%;
}

.delete-model {
  background-color: @red;
  &:hover {
    background-color: @darker-red;
  }
}

.entry {
  margin-left: 0px;
  font-size: 90%;
  &:first-child {
    margin-left: -5px;
  }
}

.btn-small {
  font-size: 95%;
  padding: 10px;
}

.help-you {
  font: @font-family-secondary;
  width: 75%;
  max-width: 560px;
}

a.btn.help-you:last-child {
    margin-bottom: 70px;
}

.addItem {
  display: inline;
  float: left;
}

.removeItem {
  background-color: @red;
  &:hover {
    background-color: @darker-red;
  }
}

.last-butt {
  margin-bottom: 60px;
}


// Special Messages
// -------------------------
.empty {
  color: @red;
}

.alert {
  margin: 21px 0px;
}

.tooltip-inner {
  background: @dark-navy;
  width: 400px;
}

.tooltip.right .tooltip-arrow {
  border-right-color: @dark-navy;
}

// Social Buttons
// -------------------------

.btn-social {
  border-radius: 2px;
}

// Font Awesome
// -------------------------

[class^="fa-"],
[class*="fa-"] {
  margin-right: 5px;
}

.fa-sort-desc {
  margin-left: 5px;
}

// API Examples
// -------------------------

.thumb {
  padding-left: 0 !important;
  padding-right: 0 !important;
}

.thumb img {
  margin-bottom: 5px;
  margin-right: 5px;
  opacity: 0.2;
  transition: opacity 0.2s;
}

.thumb:hover img {
  opacity: 1;
  box-shadow: 0 0 3px 1px @brand-primary;
}

.facebook-caption {
  position: absolute;
  background-color: rgba(0, 0, 0, 0.5);
  font-size: 12px;
  color: #fff;
  padding: 3px;
  bottom: 25px;
}

.api-examples {
  img {
    padding-right: 10px;
  }
}
/* ... */

